# httplogmonitor

./: CHANGELOG.md  LogParser.hs  Main.hs  README.md  Test.hs  httplogmonitor.cabal  log.txt
app/: Main.hs
src/: LogParser.hs
test/: Test.hs
