cabal-version: 2.4
name:
  httplogmonitor
version:
  0.1
synopsis:
  console monitor for http log files
license:
  AGPL-3.0-only
license-file:
  LICENSE
author:
  Shae Erisson
maintainer:
  Shae Erisson <shae@ScannedInAvian.com>
category:
  Web
extra-source-files:
    CHANGELOG.md
  , README.md

library
  hs-source-dirs:
    src
  exposed-modules:
    LogParser
  default-language:
    Haskell2010
  build-depends:
    , base >= 4.10.1 && < 4.13
    , attoparsec
    , attoparsec-iso8601
    , containers >= 0.5 && < 0.7
    , hinotify >= 0.4
    , text >= 1.2 && < 1.3
    , chronos >= 1.0 && < 1.1
    , ip >= 1.4.1 && < 1.6

executable httplogmonitor
  hs-source-dirs:
    app
  main-is:
    Main.hs
  other-modules:
    LogParser
  build-depends:
    , base >= 4.10.1 && < 4.13
    , attoparsec >= 0.13.2.2
    , attoparsec-iso8601
    , bytestring >= 0.10 && < 0.11
    , containers >= 0.5 && < 0.7
    , directory
    , hinotify >= 0.4
    , text >= 1.2 && < 1.3
  default-language:
    Haskell2010

test-suite test-httplogmonitor
  type:
    exitcode-stdio-1.0
  hs-source-dirs:
    test
  main-is:
    Test.hs
  build-depends:
    , base >= 4.10.1 && < 4.13
    , attoparsec >= 0.13 && < 0.14
    , attoparsec-iso8601
    , containers >= 0.5 && < 0.7
    , hedgehog
    , hedgehog-quickcheck
    , hinotify >= 0.4
    , httplogmonitor
    , quickcheck-instances
    , text >= 1.2 && < 1.3
    , chronos >= 1.0 && < 1.1
    , ip >= 1.4.1 && < 1.6
  default-language:
    Haskell2010
